--- a/index.html
+++ b/index.html
@@ -25,21 +25,51 @@
     <ul class="images">
       <li>
         <a href="cats_medium.jpg">
-          <img src="cats_small.jpg" />
+          <img width="150" height="150" src="cats_small.jpg" />
         </a>
         <p class="caption">
-          <a href="https://www.flickr.com/photos/jetske/5827857531/in/photolist-9SZi1g-eAcw8-53zkrK-98NZL3-9PvE6T-9vSoog-4kqC8H-8gzU1M-9yMddK-5zvBWg-79wYis-9vkVER-egs32z-oWQzXV-4khc92-dgjgih-2hR4AE-7Gni53-4beFvx-ei7g9j-7yrNCC-A5zqy-6iDNFS-9nmeNx-hv9xDs-dSek7E-DU2t-myyxmL-dj7A8M-jz9QM6-4qFQYF-fXRSo-iVKeLo-e3uwEk-wRGt3-8juCLz-5nEbcc-4cwiM4-nmb7a8-bNn56X-4VoiFG-61nyT7-9ZZbx7-iDot64-bihUhn-iErrSn-sBzeE-iUdbzi-4sKwQN-dUtpsb/">
+          <a href="https://www.flickr.com/photos/jetske/5827857531/">
             By Jetske
           </a>
         </p>
       </li>
       <li>
+        <a href="tree_medium.jpg">
+          <img width="150" height="150" src="tree_small.jpg" />
+        </a>
+        <p class="caption">
+          <a href="https://www.flickr.com/photos/aigle_dore/15061080128/">
+            By Moyan Brenn
+          </a>
+        </p>
+      </li>
+      <li>
         <a href="mondrian_medium.jpg">
-          <img src="mondrian_small.jpg" />
+          <img width="150" height="150" src="mondrian_small.jpg" />
         </a>
         <p class="caption">
           <a href="https://www.flickr.com/photos/raelga/4408707212/">
             By Rael Garcia Arnes
+          </a>
+        </p>
+      </li>
+      <li>
+        <a href="nyc_medium.jpg">
+          <img width="150" height="150" src="nyc_small.jpg" />
+        </a>
+        <p class="caption">
+          <a href="https://www.flickr.com/photos/isherwoodchris/3096255994/">
+            By Chris Isherwood
+          </a>
+        </p>
+      </li>
+      <li>
+        <a href="girl_medium.jpg">
+          <img width="150" height="150" src="girl_small.jpg" />
+        </a>
+        <p class="caption">
+          <a href="https://www.flickr.com/photos/25228175@N08/5896000539/">
+            By Elvin
           </a>
         </p>
       </li>
