move images to subdirectory

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <p>&hellip; or choose one of these:</p>
     <ul class="images">
       <li>
-        <a href="cats_medium.jpg">
-          <img width="150" height="150" src="cats_small.jpg" />
+        <a href="images/cats_medium.jpg">
+          <img width="150" height="150" src="images/cats_small.jpg" />
         </a>
         <p class="caption">
           <a href="https://www.flickr.com/photos/jetske/5827857531/">
@@ -34,8 +34,8 @@
         </p>
       </li>
       <li>
-        <a href="tree_medium.jpg">
-          <img width="150" height="150" src="tree_small.jpg" />
+        <a href="images/tree_medium.jpg">
+          <img width="150" height="150" src="images/tree_small.jpg" />
         </a>
         <p class="caption">
           <a href="https://www.flickr.com/photos/aigle_dore/15061080128/">
@@ -44,8 +44,8 @@
         </p>
       </li>
       <li>
-        <a href="mondrian_medium.jpg">
-          <img width="150" height="150" src="mondrian_small.jpg" />
+        <a href="images/mondrian_medium.jpg">
+          <img width="150" height="150" src="images/mondrian_small.jpg" />
         </a>
         <p class="caption">
           <a href="https://www.flickr.com/photos/raelga/4408707212/">
@@ -54,8 +54,8 @@
         </p>
       </li>
       <li>
-        <a href="nyc_medium.jpg">
-          <img width="150" height="150" src="nyc_small.jpg" />
+        <a href="images/nyc_medium.jpg">
+          <img width="150" height="150" src="images/nyc_small.jpg" />
         </a>
         <p class="caption">
           <a href="https://www.flickr.com/photos/isherwoodchris/3096255994/">
@@ -64,8 +64,8 @@
         </p>
       </li>
       <li>
-        <a href="girl_medium.jpg">
-          <img width="150" height="150" src="girl_small.jpg" />
+        <a href="images/girl_medium.jpg">
+          <img width="150" height="150" src="images/girl_small.jpg" />
         </a>
         <p class="caption">
           <a href="https://www.flickr.com/photos/25228175@N08/5896000539/">
