Use local copy of jQuery

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
   <!--<script src="numeric-1.2.6.min.js"></script>-->
   <script src="svd.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="jquery.min.js"></script>
   <script src="app.js"></script>
 
   <script>
