--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
   <!--<script src="numeric-1.2.6.min.js"></script>-->
   <script src="svd.js"></script>
+  <script src="image-svd.js"></script>
   <script src="jquery.min.js"></script>
   <script src="app.js"></script>
 
