Add file upload field (as a fallback for e.g. mobile browsers)

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     </h1>
   </div>
   <div id="drop-target">
-    <p id="drop-text"></p>
+    <p id="drop-text">
+      <noscript>Please enable JavaScript</noscript>
+    </p>
   </div>
   <div class="wrapper">
     <div id="options">
     </div>
-    <p>&hellip; or choose one of these:</p>
+    <p>&hellip; or one of these pictures:</p>
     <ul class="images">
       <li>
         <a href="images/cats_medium.jpg">
