Use noUiSlider for selection of number of SV's

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta charset="UTF-8" />
   <title>Image Compression with SVD</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="deps/noUiSlider/jquery.nouislider.min.css" />
+  <link rel="stylesheet" href="deps/noUiSlider/jquery.nouislider.pips.min.css" />
 </head>
 
 <body>
@@ -82,6 +84,7 @@
   <script src="svd.js"></script>
   <script src="image-svd.js"></script>
   <script src="jquery.min.js"></script>
+  <script src="deps/noUiSlider/jquery.nouislider.all.min.js"></script>
   <script src="app.js"></script>
 
   <script>
