--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
   </div>
 
   <!--<script src="numeric-1.2.6.min.js"></script>-->
-  <script src="svd.js"></script>
-  <script src="image-svd.js"></script>
+  <script src="js/image-svd.js"></script>
   <script src="deps/jquery.min.js"></script>
   <script src="deps/noUiSlider/jquery.nouislider.all.min.js"></script>
   <script src="app.js"></script>
