Rewrite based on React.js

--- a/index.html
+++ b/index.html
@@ -16,79 +16,17 @@
       Image Compression with<br />
       Singular Value Decomposition
     </h1>
+    <noscript>Please enable JavaScript</noscript>
   </div>
-  <div id="drop-target">
-    <p id="drop-text">
-      <noscript>Please enable JavaScript</noscript>
-    </p>
-  </div>
-  <div class="wrapper">
-    <div id="options">
-    </div>
-    <p>&hellip; or one of these pictures:</p>
-    <ul class="images">
-      <li>
-        <a href="images/cats_medium.jpg">
-          <img width="150" height="150" src="images/cats_small.jpg" />
-        </a>
-        <p class="caption">
-          <a href="https://www.flickr.com/photos/jetske/5827857531/">
-            By Jetske
-          </a>
-        </p>
-      </li>
-      <li>
-        <a href="images/tree_medium.jpg">
-          <img width="150" height="150" src="images/tree_small.jpg" />
-        </a>
-        <p class="caption">
-          <a href="https://www.flickr.com/photos/aigle_dore/15061080128/">
-            By Moyan Brenn
-          </a>
-        </p>
-      </li>
-      <li>
-        <a href="images/mondrian_medium.jpg">
-          <img width="150" height="150" src="images/mondrian_small.jpg" />
-        </a>
-        <p class="caption">
-          <a href="https://www.flickr.com/photos/raelga/4408707212/">
-            By Rael Garcia Arnes
-          </a>
-        </p>
-      </li>
-      <li>
-        <a href="images/nyc_medium.jpg">
-          <img width="150" height="150" src="images/nyc_small.jpg" />
-        </a>
-        <p class="caption">
-          <a href="https://www.flickr.com/photos/isherwoodchris/3096255994/">
-            By Chris Isherwood
-          </a>
-        </p>
-      </li>
-      <li>
-        <a href="images/girl_medium.jpg">
-          <img width="150" height="150" src="images/girl_small.jpg" />
-        </a>
-        <p class="caption">
-          <a href="https://www.flickr.com/photos/25228175@N08/5896000539/">
-            By Elvin
-          </a>
-        </p>
-      </li>
-    </ul>
-  </div>
+
+  <div class="app"></div>
 
   <!--<script src="numeric-1.2.6.min.js"></script>-->
   <script src="js/image-svd.js"></script>
   <script src="deps/jquery.min.js"></script>
+  <script src="deps/react.min.js"></script>
   <script src="deps/noUiSlider/jquery.nouislider.all.min.js"></script>
-  <script src="app.js"></script>
-
-  <script>
-    initialize();
-  </script>
+  <script src="build/app.js"></script>
 </body>
 
 </html>
