--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 
   <div class="app"></div>
 
+  <div class="wrapper">
+    <p class="credits">Built by <a href="http://timbaumann.info">Tim Baumann</a>. Fork this project on <a href="https://github.com/timjb/svd-image-compression-demo">GitHub</a>.</p>
+  </div>
+
   <!--<script src="numeric-1.2.6.min.js"></script>-->
   <script src="js/image-svd.js"></script>
   <script src="deps/jquery.min.js"></script>
