--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8" />
   <title>Image Compression with SVD</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="deps/noUiSlider/jquery.nouislider.min.css" />
-  <link rel="stylesheet" href="deps/noUiSlider/jquery.nouislider.pips.min.css" />
+  <link rel="stylesheet" href="deps/noUiSlider/nouislider.min.css" />
+  <link rel="stylesheet" href="deps/noUiSlider/nouislider.pips.css" />
 </head>
 
 <body>
@@ -29,7 +29,7 @@
   <script src="js/image-svd.js"></script>
   <script src="deps/jquery.min.js"></script>
   <script src="deps/react.min.js"></script>
-  <script src="deps/noUiSlider/jquery.nouislider.all.min.js"></script>
+  <script src="deps/noUiSlider/nouislider.min.js"></script>
   <script src="build/app.js"></script>
 </body>
 
