remove jquery dependency

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <noscript>Please enable JavaScript</noscript>
   </div>
 
-  <div class="app"></div>
+  <div class="app" id="app"></div>
 
   <div class="wrapper">
     <p class="credits">Built by <a href="http://timbaumann.info">Tim Baumann</a>. Fork this project on <a href="https://github.com/timjb/svd-image-compression-demo">GitHub</a>.</p>
@@ -27,7 +27,6 @@
 
   <!--<script src="numeric-1.2.6.min.js"></script>-->
   <script src="js/image-svd.js"></script>
-  <script src="deps/jquery.min.js"></script>
   <script src="deps/react.min.js"></script>
   <script src="deps/noUiSlider/nouislider.min.js"></script>
   <script src="build/app.js"></script>
