--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Image Compression with SVD</title>
+  <title>SVD-Demo: Image Compression</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="deps/noUiSlider/nouislider.min.css" />
   <link rel="stylesheet" href="deps/noUiSlider/nouislider.pips.css" />
+  <link rel="shortcut icon" type="image/png" href="favicon.png" />
 </head>
 
 <body>
