add image gallery

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="deps/noUiSlider/nouislider.min.css" />
   <link rel="stylesheet" href="deps/noUiSlider/nouislider.pips.css" />
   <link rel="shortcut icon" type="image/png" href="favicon.png" />
+  <link rel="stylesheet" href="deps/slick/slick.css" />
+  <link rel="stylesheet" href="deps/slick/slick-theme.css" />
+  <!--<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.3.15/slick.css" />-->
 </head>
 
 <body>
@@ -174,6 +177,7 @@
   <script src="js/image-svd.js"></script>
   <script src="deps/react.min.js"></script>
   <script src="deps/noUiSlider/nouislider.min.js"></script>
+  <script src="deps/react-slick.min.js"></script>
   <script src="build/app.js"></script>
 </body>
 
