--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           compressed size = <span class="u-color">m&thinsp;&times;&thinsp;k</span> + <span class="sigma-color">k</span> + <span class="v-color">k&thinsp;&times;&thinsp;n</span> = k &times; (<span class="sigma-color">1</span> + <span class="u-color">m</span> + <span class="v-color">n</span>)
         </p>
         <p>
-          (Due to the orthogonality of <span class="math">U</span> and <span class="math">V</span> slightly less space is needed.)
+          (Actually, slightly less space is needed due to the orthogonality of <span class="math">U</span> and <span class="math">V</span>.)
           One can prove that this approximation is <a href="https://en.wikipedia.org/wiki/Low-rank_approximation#Basic_low-rank_approximation_problem" title="Eckart–Young–Mirsky theorem">optimal in a certain sense</a>.
         </p>
         <p>
@@ -161,10 +161,11 @@
         <p>
           The <a href="http://www.netlib.org/clapack/">CLAPACK</a> library provides the algorithm for computing the SVD.
           Since CLAPACK is a C library (it is a translation of the Fortran library LAPACK) we use <a href="https://github.com/kripken/emscripten">emscripten</a> to translate it to JavaScript/asm.js.
-          The SVDs of all three color channels are computed in parallel in the background using <a href="https://en.wikipedia.org/wiki/Web_worker">web workers</a>.
+          The SVDs of all three color channels are computed in parallel one the client-side using <a href="https://en.wikipedia.org/wiki/Web_worker">web workers</a>.
           To provide the quick preview, we use <a href="https://research.facebook.com/blog/294071574113354/fast-randomized-svd/">a randomized algorithm</a> to compute an approximate truncated SVD with 50 singular values.
 
-          The user interface uses <a href="http://facebook.github.io/react/">React</a> and <a href="http://refreshless.com/nouislider/">noUiSlider</a>.
+          The user interface uses <a href="http://facebook.github.io/react/">React</a>, <a href="https://github.com/akiran/react-slick">react-slick</a> and <a href="http://refreshless.com/nouislider/">noUiSlider</a>.
+          Thanks to the creators of all these great projects!
         </p>
       <p class="credits">
         Built by <a href="http://github.com/timjb">Tim Baumann</a>. Fork this project on <a href="https://github.com/timjb/svd-image-compression-demo">GitHub</a>.
