Give better <noscript> message

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       Image Compression with<br />
       Singular Value Decomposition
     </h1>
-    <noscript>Please enable JavaScript</noscript>
+    <noscript>The interactive demo runs purely on the client-side. You therefore have to enable JavaScript to enjoy it.</noscript>
   </div>
 
   <div class="app" id="app"></div>
