--- a/index.html
+++ b/index.html
@@ -185,6 +185,16 @@
   <script src="deps/noUiSlider/nouislider.min.js"></script>
   <script src="deps/react-slick.min.js"></script>
   <script src="build/app.js"></script>
+  
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-67822852-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 </body>
 
 </html>
