Update react, react-slick, noUiSlider dependencies

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
   <!--<script src="numeric-1.2.6.min.js"></script>-->
   <script src="js/image-svd.js"></script>
   <script src="deps/react.min.js"></script>
+  <script src="deps/react-dom.min.js"></script>
   <script src="deps/noUiSlider/nouislider.min.js"></script>
   <script src="deps/react-slick.min.js"></script>
   <script src="build/app.js"></script>
