--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <head>
   <meta charset="UTF-8" />
   <title>SVD-Demo: Image Compression</title>
-  <link rel="stylesheet" href="deps/noUiSlider/nouislider.min.css" />
-  <link rel="stylesheet" href="deps/noUiSlider/nouislider.pips.css" />
   <link rel="shortcut icon" type="image/png" href="favicon.png" />
-  <link rel="stylesheet" href="deps/slick/slick.css" />
-  <link rel="stylesheet" href="deps/slick/slick-theme.css" />
+  <link rel="stylesheet" href="build/nouislider.min.css" />
+  <link rel="stylesheet" href="build/nouislider.pips.css" />
+  <link rel="stylesheet" href="build/slick.css" />
+  <link rel="stylesheet" href="build/slick-theme.css" />
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -179,11 +179,20 @@
     </div>
   </div>
 
-  <script src="js/image-svd.js"></script>
-  <script src="deps/react.min.js"></script>
-  <script src="deps/react-dom.min.js"></script>
-  <script src="deps/noUiSlider/nouislider.min.js"></script>
-  <script src="deps/react-slick.min.js"></script>
+  <script src="build/react.min.js"></script>
+  <script src="build/react-dom.min.js"></script>
+  <script>
+    // Hack
+    function require(moduleName) {
+      if (moduleName === 'react') {
+        return React;
+      } else if (moduleName === 'react-dom') {
+        return ReactDOM;
+      } else {
+        throw new Error("could not find module '" + moduleName + "'!");
+      }
+    }
+  </script>
   <script src="build/app.js"></script>
   
   <script>
