--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
     </div>
   </div>
 
-  <script src="build/react.min.js"></script>
-  <script src="build/react-dom.min.js"></script>
+  <script src="build/react.production.min.js"></script>
+  <script src="build/react-dom.production.min.js"></script>
   <script>
     // Hack
     function require(moduleName) {
