--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       }
     }
   </script>
-  <script src="build/app.js"></script>
+  <script src="build/index.js"></script>
 </body>
 
 </html>
