--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
   <meta charset="UTF-8" />
   <title>SVD-Demo: Image Compression</title>
   <link rel="shortcut icon" type="image/png" href="favicon.png" />
-  <link rel="stylesheet" href="dist/nouislider.min.css" />
-  <link rel="stylesheet" href="dist/slick.css" />
-  <link rel="stylesheet" href="dist/slick-theme.css" />
+  <link rel="stylesheet" href="nouislider.min.css" />
+  <link rel="stylesheet" href="slick.css" />
+  <link rel="stylesheet" href="slick-theme.css" />
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -178,7 +178,7 @@
     </div>
   </div>
 
-  <script src="dist/main.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
